pomelo predictor init

--- a/deep-learning/pomelo-predictor/index.html
+++ b/deep-learning/pomelo-predictor/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <script src="./dist/bundle.js"></script>
+  <img id="image1" src="./pomelos/1.png" width="100px;">
 </body>
 </html>
